samples/_failures_safe/1761660382_4fbc3f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f185203.c: In function ‘main’:
./samples/SAFE/__tmp_9f185203.c:140:9: error: expected ‘:’ or ‘...’ at end of input
  140 |         case OP_TRANSPOSE
      |         ^~~~
./samples/SAFE/__tmp_9f185203.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9f185203.c:140:9: error: expected declaration or statement at end of input
